llama-service.yml
apiVersion: v1
kind: Service
metadata:
  name: llama-service
spec:
  selector:
    app: llama-server
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7080
